--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@
     font: 1.5em sans-serif;
     flex-direction: column;
     justify-content: center;
-    background-color: rgb(255, 255, 255);
+    background: rgb(233, 233, 233) url(https://cdn2.hubspot.net/hubfs/4635813/marble-around-the-world.jpg) no-repeat center center/cover;
 }
 
 .links-cont{
@@ -16,7 +16,7 @@
     height: 30rem;
     width: 25rem;
     box-shadow: 10px 10px 21px -5px rgba(0,0,0,0.75);
-    background-color: rgb(233, 233, 233);
+    background: rgb(233, 233, 233) url(https://media.istockphoto.com/photos/marble-white-and-texture-tile-ceramic-gray-background-marble-natural-picture-id1069378234?b=1&k=20&m=1069378234&s=170667a&w=0&h=FN43XizebxiDy35kNIfLA9pS8zoycMAMhanmkd21fBQ=) no-repeat center center/cover;
 }
 .links-cont a{
     text-decoration: none;
@@ -53,6 +53,8 @@
 }
 .e-nav-search{
     height: 100%;
+    display: flex;
+    align-items: center;
     width: 35%;
     background-color: rgb(255, 255, 255);
 }
